# nc2parquet

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.json  multi_filter_example.json
.github/workflows/: ci.yml  publish.yml
examples/: check_coords.rs  dimension_filtering.rs  list_filter_example.json  multi_filter_example.json  range_filter_example.json  s3_era5_workflow.json  s3_to_local_workflow.json  spatial_filter_example.json  spatiotemporal_filter_example.json  trait_examples.rs
examples/cli/: cli_examples.sh
examples/configs/: README.md  mixed_storage_ocean.json  multi_filter.json  multi_source_example.json  s3_weather.json  simple_local.json
examples/postprocessing/: climate_processing.yaml  column_renaming.json  complex_formula.json  complex_pipeline.json  datetime_conversion.json  formula_application.json  ocean_data.json  unit_conversion.json  weather_analysis.json
examples/test_configs/: invalid_config.json  valid_config.json  weather_template.yaml
src/: cli.rs  cli_tests.rs  extract.rs  filters.rs  info.rs  input.rs  lib.rs  log.rs  main.rs  output.rs  postprocess.rs  storage.rs  tests.rs
