[package]
name = "nc2parquet"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"
netcdf = { version = "0.11.0", features = ["static"] }
polars = { version = "0.51.0", features = ["lazy", "parquet"] }
serde = "1.0.226"
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.8"
